@startuml
title Diagrama de Classes Corrigido
skinparam classAttributeIconSize 0

class Usuario {
  +id: UUID
  +email: String
  +senhaHash: String
  +role: Role
  +ativo: boolean
}

enum Role {
  ALUNO
  PROFESSOR
  EMPRESA
  ADMIN
}

class Instituicao {
  +id: UUID
  +nome: String
  +cnpj: String
  +ativa: boolean
}

class Professor {
  +nome: String
  +cpf: String
  +saldo: long = 1000
}

class Aluno {
  +nome: String
  +cpf: String
  +rg: String
  +endereco: String
  +curso: String
}

Usuario <|-- Professor
Usuario <|-- Aluno

Professor "1" -- "1" Instituicao
Aluno "1" -- "1" Instituicao

class EmpresaParceira {
  +id: UUID
  +nome: String
  +cnpj: String
  +emailComercial: String
  +endereco: String
  +ativa: boolean
}
Usuario <|-- EmpresaParceira

class Vantagem {
  +id: UUID
  +titulo: String
  +descricao: String
  +custoMoedas: int
  +fotoUrl: String
  +ativa: boolean
}
EmpresaParceira "1" -- "0..*" Vantagem

class Transacao {
  +id: UUID
  +valor: long
  +mensagem: String
  +createdAt: Instant
}
Transacao "0..1" -- Professor : autorEnvio
Transacao "1" -- "1" Aluno : destinatario

class Resgate {
  +id: UUID
  +codigo: String
  +status: ResgateStatus
  +createdAt: Instant
  +validade: LocalDate
}

enum ResgateStatus {
  GERADO
  UTILIZADO
  CANCELADO
}

Aluno "1" -- "0..*" Resgate
Resgate "1" -- "1" Vantagem

@enduml